fixing the span break in supporting paragraph

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,6 +60,7 @@ h1 {
     font-size: 16px;
     line-height: 24px; 
     letter-spacing: -0.5px;
+    display: block;
 }
 
 #questionContainer label {
